--- a/version2/templates/version2/username.html
+++ b/version2/templates/version2/username.html
@@ -137,19 +137,19 @@
 </head>
 <body>
 <div class="text">
-    <p>Congratulations! You made our Top 5.</p>
-    <p>By that, you have the privilege to leave your mark here.</p>
+    <p>تهانينا! نتيجتكم من أفضل 5 نتائج لدينا</p>
+    <p>بذلك ، لديك امتياز ترك بصمتك هنا</p>
 </div>
 
 <div class="submit">
     <form action="../leaderboard{{ score }}/" id="main_form" method="get">
         <input type="text" name="username">
-        <input type="submit" value="Submit">
+        <input type="submit" value="إرسال">
     </form>
 </div>
 
 <div class="board">
-    <h3 class="board-title">Leaderboard TOP 5!</h3>
+    <h3 class="board-title">قائمة أعلى 5 نتائج</h3>
 
     <div id="container">
         {% load staticfiles %}
