--- a/version2/templates/version2/leaderboard.html
+++ b/version2/templates/version2/leaderboard.html
@@ -447,8 +447,8 @@
 <script src="jquery-3.4.1.min.js"></script>
 
 <div class="block">
-    <h1 class="header header1">Thank you for playing!</h1>
-    <h2 class="header header2">You scored {{ score }} points!</h2>
+    <h1 class="header header1">شكراً على مشاركتم</h1>
+    <h2 class="header header2">النتيجة {{ score }} نقطة</h2>
     <img id="badge">
     <p></p>
     <h2 class="header" id="percentile"></h2>
@@ -456,13 +456,13 @@
 
     <div style="text-align: center">
         <form action="https://shielded-tundra-32718.herokuapp.com/" id="replay">
-            <input type="submit" value="Play Again" class="button button1">
+            <input type="submit" value="العب مرة أخرى" class="button button1">
         </form>
     </div>
 
 
     <div class="share-block">
-        <p class="share">Share with you friends!</p>
+        <p class="share">شاركها مع أصدقائك</p>
 
         <!-- Sharingbutton Facebook -->
         <a class="resp-sharing-button__link"
@@ -474,7 +474,7 @@
                         <path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/>
                     </svg>
                 </div>
-                Facebook
+                فيس بوك
             </div>
         </a>
 
@@ -488,7 +488,7 @@
                         <path d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"/>
                     </svg>
                 </div>
-                Twitter
+                تويتر
             </div>
         </a>
 
@@ -502,7 +502,7 @@
                         <path d="M22 4H2C.9 4 0 4.9 0 6v12c0 1.1.9 2 2 2h20c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zM7.25 14.43l-3.5 2c-.08.05-.17.07-.25.07-.17 0-.34-.1-.43-.25-.14-.24-.06-.55.18-.68l3.5-2c.24-.14.55-.06.68.18.14.24.06.55-.18.68zm4.75.07c-.1 0-.2-.03-.27-.08l-8.5-5.5c-.23-.15-.3-.46-.15-.7.15-.22.46-.3.7-.14L12 13.4l8.23-5.32c.23-.15.54-.08.7.15.14.23.07.54-.16.7l-8.5 5.5c-.08.04-.17.07-.27.07zm8.93 1.75c-.1.16-.26.25-.43.25-.08 0-.17-.02-.25-.07l-3.5-2c-.24-.13-.32-.44-.18-.68s.44-.32.68-.18l3.5 2c.24.13.32.44.18.68z"/>
                     </svg>
                 </div>
-                E-Mail
+                البريد الإلكتروني
             </div>
         </a>
 
@@ -516,7 +516,7 @@
                         <path d="M6.5 21.5h-5v-13h5v13zM4 6.5C2.5 6.5 1.5 5.3 1.5 4s1-2.4 2.5-2.4c1.6 0 2.5 1 2.6 2.5 0 1.4-1 2.5-2.6 2.5zm11.5 6c-1 0-2 1-2 2v7h-5v-13h5V10s1.6-1.5 4-1.5c3 0 5 2.2 5 6.3v6.7h-5v-7c0-1-1-2-2-2z"/>
                     </svg>
                 </div>
-                LinkedIn
+                لينكدين
             </div>
         </a>
 
@@ -539,7 +539,7 @@
         {##}
         {#        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"#}
         {#           data-text="&#39;Google or Not?&#39; Play a game and find out!"#}
-        {#           data-url="https://shielded-tundra-32718.herokuapp.com" data-show-count="false">Tweet</a>#}
+        {#           data-url="https://shielded-tundra-32718.herokuapp.com" data-show-count="false">تويت</a>#}
         {#        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>#}
         {##}
         {#        <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>#}
@@ -548,7 +548,7 @@
     </div>
 
     {#    <div class="board">#}
-    {#        <h3 class="board-title">Leaderboard TOP 5!</h3>#}
+    {#        <h3 class="board-title">قائمة أعلى 5 نتائج</h3>#}
     {##}
     {#        <div id="container">#}
     {#            {% load staticfiles %}#}
@@ -570,7 +570,7 @@
 
 
     <div class="board">
-        <h3 class="board-title">Leaderboard TOP 5!</h3>
+        <h3 class="board-title">قائمة أعلى 5 نتائج</h3>
 
         <div id="container">
             {% load staticfiles %}
@@ -629,7 +629,7 @@
     </div>
 
     <div class="share-block">
-        <p class="share">Share with you friends!</p>
+        <p class="share">شاركها مع أصدقائك</p>
 
         <!-- Sharingbutton Facebook -->
         <a class="resp-sharing-button__link"
@@ -641,7 +641,7 @@
                         <path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/>
                     </svg>
                 </div>
-                Facebook
+                فيس بوك
             </div>
         </a>
 
@@ -655,7 +655,7 @@
                         <path d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"/>
                     </svg>
                 </div>
-                Twitter
+                تويتر
             </div>
         </a>
 
@@ -669,7 +669,7 @@
                         <path d="M22 4H2C.9 4 0 4.9 0 6v12c0 1.1.9 2 2 2h20c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zM7.25 14.43l-3.5 2c-.08.05-.17.07-.25.07-.17 0-.34-.1-.43-.25-.14-.24-.06-.55.18-.68l3.5-2c.24-.14.55-.06.68.18.14.24.06.55-.18.68zm4.75.07c-.1 0-.2-.03-.27-.08l-8.5-5.5c-.23-.15-.3-.46-.15-.7.15-.22.46-.3.7-.14L12 13.4l8.23-5.32c.23-.15.54-.08.7.15.14.23.07.54-.16.7l-8.5 5.5c-.08.04-.17.07-.27.07zm8.93 1.75c-.1.16-.26.25-.43.25-.08 0-.17-.02-.25-.07l-3.5-2c-.24-.13-.32-.44-.18-.68s.44-.32.68-.18l3.5 2c.24.13.32.44.18.68z"/>
                     </svg>
                 </div>
-                E-Mail
+                البريد الإلكتروني
             </div>
         </a>
 
@@ -683,7 +683,7 @@
                         <path d="M6.5 21.5h-5v-13h5v13zM4 6.5C2.5 6.5 1.5 5.3 1.5 4s1-2.4 2.5-2.4c1.6 0 2.5 1 2.6 2.5 0 1.4-1 2.5-2.6 2.5zm11.5 6c-1 0-2 1-2 2v7h-5v-13h5V10s1.6-1.5 4-1.5c3 0 5 2.2 5 6.3v6.7h-5v-7c0-1-1-2-2-2z"/>
                     </svg>
                 </div>
-                LinkedIn
+                لينكدين
             </div>
         </a>
 
@@ -715,7 +715,7 @@
 
     <div style="text-align: center">
         <form action="https://shielded-tundra-32718.herokuapp.com/" id="replay">
-            <input type="submit" value="Play Again" class="button">
+            <input type="submit" value="العب مرة أخرى" class="button">
         </form>
     </div>
 
