deleted search text

--- a/version2/templates/version2/home.html
+++ b/version2/templates/version2/home.html
@@ -282,7 +282,7 @@
 
     <!-- Sets up the Query bar -->
     <div class="main_divs">
-        <p style="text-align: right;" class="query" id="qstring">البحث {{ query_name }}</p>
+        <p style="text-align: right;" class="query" id="qstring">{{ query_name }}</p>
     </div>
     <div id="myProgress">
         <div id="myBar"></div>
